# botshop_v2

./: .gitignore  Cargo.toml  README.md
examples/: db_util.rs
resources/: daily.csv
src/: main.rs
src/commands/: daily.rs  info.rs  mod.rs  modify.rs  pending.rs  periodic.rs  shop.rs  transactions.rs  util.rs
src/util/: components.rs  db.rs  mod.rs  paginator.rs  records.rs
